apps/teslamate/postgres/networkpolicies/ingress-teslamate-postgres.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-teslamate-postgres
  namespace: teslamate
spec:
  selector: app == 'teslamate-postgres'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app == 'teslamate' ||
          app == 'teslamate-grafana'
      destination:
        ports:
          - 5432
